# claudechic

./: CLAUDE.md  app.py  pyproject.toml  styles.tcss
.ai-docs/: analytics.md
cc_textual/: app.py  formatting.py  styles.tcss  worktree.py
cc_textual/widgets/: __init__.py  autocomplete.py  chat.py  todo.py
claude_alamode/: __init__.py  __main__.py  agent.py  app.py  formatting.py  mcp.py  sessions.py  styles.tcss  theme.py
claude_alamode/features/worktree/: commands.py  git.py
claude_alamode/widgets/: __init__.py  agents.py  autocomplete.py  chat.py  footer.py  indicators.py  tools.py
claudechic/: __main__.py  agent.py  agent_manager.py  analytics.py  app.py  commands.py  compact.py  config.py  errors.py  formatting.py  mcp.py  processes.py  protocols.py  sampling.py  sessions.py  styles.tcss  theme.py
claudechic/features/diff/: git.py  widgets.py
claudechic/features/worktree/: commands.py
claudechic/screens/: chat.py  diff.py
claudechic/widgets/: __init__.py  agents.py  chat.py  chat_view.py  footer.py  model_prompt.py  prompts.py  scroll.py  tools.py  usage.py
claudechic/widgets/base/: __init__.py  clickable.py  cursor.py
claudechic/widgets/content/: __init__.py  diff.py  message.py  tools.py
claudechic/widgets/layout/: __init__.py  chat_view.py  footer.py  indicators.py  processes.py  sidebar.py
claudechic/widgets/modals/: __init__.py
claudechic/widgets/primitives/: spinner.py
tests/: test_app.py  test_autocomplete.py  test_mcp_ask_agent.py  test_sessions.py  test_widgets.py
