[project]
name = "cc-textual"
version = "0.1.0"
description = "Terminal UI for Claude Code built with Textual"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.19",
    "psutil>=5.9.0",
    "pyperclip>=1.11.0",
    "textual>=7.1.0",
    "textual-autocomplete>=4.0.6",
]

[project.scripts]
cc-textual = "cc_textual.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
